🔧 New version! Added icon (closes #12), closes #13 (probably unavoidable), removed unsafeLoading from user-available methods, introduced originalDeserializer which doesn't change during runtime, removed deprecated code (URL)
(cherry picked from commit 50e31d0248728682e17584c3aaf74824d0809f10)